--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -1,5 +1,9 @@
 .content {
     width: 100%;
-    height: 90vh;
     background-color: rgb(207, 207, 207);
+    padding: 7rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
