--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -3,6 +3,12 @@
     background-color: rgb(207, 207, 207);
     padding: 7rem;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.heros {
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
