--- a/src/components/Content/content.css
+++ b/src/components/Content/content.css
@@ -1,7 +1,7 @@
 .content {
     width: 100%;
     background-color: rgb(207, 207, 207);
-    padding: 7rem;
+    padding: 5rem 6rem;
     display: flex;
     flex-direction: column;
     align-items: center;
